kubernetes/booklore/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment

metadata:
  name: booklore
  namespace: booklore

spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: booklore
  template:
    metadata:
      labels:
        app: booklore
    spec:
      securityContext:
        fsGroup: 10001
      containers:
      - name: booklore
        image: booklore/booklore:v2.0.0@sha256:954e4128d7ac1335b995b08bfc2d24362b416bf8b4204e9bee0c99b4cb8d1fd1
        ports:
        - containerPort: 6060
          name: http
        volumeMounts:
        - name: data
          mountPath: /app/data
        - name: books
          mountPath: /books
        - name: bookdrop
          mountPath: /bookdrop
      volumes:
      - name: data
        persistentVolumeClaim:
          claimName: booklore-data
      - name: books
        nfs:
          server: fs2.oneill.net
          path: /volume2/shared/books/booklore
      - name: bookdrop
        nfs:
          server: fs2.oneill.net
          path: /volume2/shared/downloads/booklore-ingestion
